--- a/views/pricing/index.pug
+++ b/views/pricing/index.pug
@@ -39,7 +39,7 @@ block content
                             i(class="fas fa-check")
                         span.each-pricing-privilege-text 3 bedava template
                 .each-pricing
-                    .pricing-title(style="color:#2EC5CE") Starter
+                    .pricing-title(style="color:#2EC5CE") Başlangıç
                     .pricing-description Geri bildirim arayan girişim ve küçük şirketler için
                     .prices-per-month-content
                         .prices-per-month-content-price 200 TL
@@ -67,7 +67,7 @@ block content
                             i(class="fas fa-check")
                         span.each-pricing-privilege-text Aylık bedava 10 tester cevabı
                 .each-pricing
-                    .pricing-title(style="color:#FED355") Professional
+                    .pricing-title(style="color:#FED355") Profesyonel
                     .pricing-description Hızla büyüyen girişim ve küçük şirketler için
                     .prices-per-month-content
                         .prices-per-month-content-price 350 TL
