--- a/public/css/pricing/index.css
+++ b/public/css/pricing/index.css
@@ -107,8 +107,8 @@
     height: 100%;
     background-color: rgb(255, 255, 255);
     border-radius: 25px;
-    box-shadow: 0px 0px 10px 10px rgba(134, 174, 181, 0.5);
-    padding: 70px 50px 50px 50px;
+    box-shadow: 0px 14px 34px rgba(134, 174, 181, 0.4);
+    padding: 46px 50px 50px 50px;
     margin-bottom: 100px;
   }
 
@@ -127,7 +127,7 @@
       width: 100%;
       height: 50px;
       padding: 5px 10px;
-      background:  rgb(46,197,206);
+      background:  rgb(46, 197, 206);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -140,7 +140,6 @@
 
   .each-pricing-privilege-text {
       font: 14px "manrope";
-      color: rgb(3, 17, 73);
   }
 
   .prices-per-month-content {
@@ -166,13 +165,12 @@
       align-items: center;
       margin-bottom: 20px;
   }
-  
   .prices-per-month-content {
       display: flex;
       align-items: baseline;
   }
   .prices-per-month-content-price {
-      font: 900 48px "manrope";
+      font: 600 48px helvetica;
       color: rgb(3, 17, 73);
   }
 
@@ -181,31 +179,38 @@
     .all-inner-wrapper {
         display: flex;
         flex-direction: column;
+        align-items: center;
+    }
+
+    .start-title {
+      font-size: 40px;
     }
 
     .start-content-wrapper {
-      margin-bottom: 100px;
+      padding-bottom: 120px;
     }
 
     .pricings-content {
         width: 100%;
         min-height: fit-content;
-        height: fit-content;
+        max-height: fit-content;
+        height: 500%;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         margin-left: 0;
-        position: relative;
         flex-wrap: nowrap;
+        margin-top: 0;
+        margin-bottom: 0;
       }
 
       .each-pricing {
         width: 300px;
         height: 600px;
         background-color: rgb(255, 255, 255);
+        box-shadow: 0px 14px 34px rgba(134, 174, 181, 0.4);
         border-radius: 25px;
-        box-shadow: 0px 0px 10px 10px rgba(134, 174, 181, 0.5);
         padding: 70px 50px 50px 50px;
         margin-bottom: 100px;
       }
@@ -237,8 +242,7 @@
       }
     
       .each-pricing-privilege-text {
-          font: 500 14px "manrope";
-          color: rgb(3, 17, 73);
+          font: 14px "manrope";
       }
     
       .prices-per-month-content {
