--- a/public/css/resources/index.css
+++ b/public/css/resources/index.css
@@ -1,4 +1,9 @@
 
+a {
+  text-decoration: none;
+  color: rgb(24, 25, 31);
+}
+
 hr {
   width: 80%;
   margin-left: 10%;
@@ -144,7 +149,6 @@ hr {
     display: inline-flex;
     flex-wrap: wrap;
     overflow: hidden;
-    margin-bottom: 200px;
     padding: 0 2%;
   }
 
@@ -152,7 +156,7 @@ hr {
     width: 231px;
     height: 199px;
     border-radius: 20px;
-    box-shadow: 0 0 10px 10px  rgb(151,226,231,0.2);
+    box-shadow: 0px 14px 34px rgba(134, 174, 181, 0.4);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -289,7 +293,7 @@ hr {
       width: 100px;
     } 
     .contents-titles {
-      width: 100%;
+      width: 110%;
       margin: 40px 0 0 0;
       display: flex;
       justify-content: center;
@@ -314,9 +318,10 @@ hr {
 
     .each-case-study-wrapper {
       min-width: 100px;
+      max-width: 100px;
       height: 86px;
       border-radius: 5px;
-      box-shadow: 0 0 5px 5px  rgb(151,226,231,0.2);
+      box-shadow: 0px 5px 7px rgba(134, 174, 181, 0.4);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
