--- a/views/tester/index.pug
+++ b/views/tester/index.pug
@@ -6,17 +6,17 @@ block content
       .tester-landing-transparent-wrapper
         .tester-landing-header
           img.tester-landing-logo(src="/res/images/logo/white.png" alt="usersmagic logo, easiest way of makin money")
-          a.tester-go-company-button(href="/company") Company Page
-        span.tester-landing-above-title BECOME A TESTER
-        span.tester-landing-title Be heard by companies,
-        span.tester-landing-title while getting paid
-        span.tester-landing-subtitle(style="margin-top: 30px") Becoming a tester can help you turn your opinions into extra
-        span.tester-landing-subtitle income and support great products you might use and love.
-        span.tester-landing-subtitle-responsive Becoming a tester can help you turn your opinions into extra income and support great products you might use and love.
-        a.tester-join-waitlist-button(href="https://tester.usersmagic.com/auth/register" target="_blank") Join the waitlist
+          a.tester-go-company-button(href="/company") Şirket sayfası
+        span.tester-landing-above-title Tester ol
+        span.tester-landing-title Anket doldurarak
+        span.tester-landing-title para kazanın
+        span.tester-landing-subtitle(style="margin-top: 30px") Tester olmak, fikirlerinizi ekstraya dönüştürmenize yardımcı olabilir.
+        span.tester-landing-subtitle kullanabileceğiniz ve sevebileceğiniz harika ürünlere gelir ve destek sağlar.
+        span.tester-landing-subtitle-responsive Tester olmak, fikirlerinizi ek gelire dönüştürmenize ve kullanabileceğiniz ve sevebileceğiniz harika ürünleri desteklemenize yardımcı olabilir.
+        a.tester-join-waitlist-button(href="https://tester.usersmagic.com/auth/register" target="_blank") Bekleme listesine katıl
         .tester-login-button
-          span Already have an account?
-          a(href="https://tester.usersmagic.com/auth/login" target="_blank") Login
+          span Hesabınız var mı?
+          a(href="https://tester.usersmagic.com/auth/login" target="_blank") Oturum aç
       .tester-brand-wrapper
         img.each-brand(src="/res/images/tester/logos/clay.png" alt="usersmagic clay")
         img.each-brand(src="/res/images/tester/logos/varan.png" alt="usersmagic varan")
@@ -28,18 +28,18 @@ block content
           .each-tester-point-icon
             i.far.fa-user
           .each-tester-point-info
-            span.each-tester-point-title Create an account
-            span.each-tester-point-text Join the waitlist and fill out some surveys to earn priority. You will receive an email when you are in.
+            span.each-tester-point-title Hesap oluşturun
+            span.each-tester-point-text Bekleme listesine katılın ve öncelik kazanmak için bazı anketleri doldurun. İçeri girdiğinizde bir e-posta alacaksınız.
         .each-tester-point-wrapper(style="margin: 0px 40px")
           .each-tester-point-icon
             i.fas.fa-mobile-alt
           .each-tester-point-info
-            span.each-tester-point-title Answer questions
-            span.each-tester-point-text All you have to do is answer some questions about what you think about certian apps and websites.
+            span.each-tester-point-title Soruları cevaplayın
+            span.each-tester-point-text Tek yapmanız gereken, belirli uygulamalar ve web siteleri hakkında ne düşündüğünüzle ilgili bazı soruları yanıtlamak.
         .each-tester-point-wrapper
           .each-tester-point-icon
             i.far.fa-smile
           .each-tester-point-info
-            span.each-tester-point-title Get paid
-            span.each-tester-point-text We will pay you as soon as your answers are accepted. You will receive payments through Paypal.
+            span.each-tester-point-title Para kazanın
+            span.each-tester-point-text Cevaplarınız kabul edilir edilmez size ödeme yapacağız. Papara üzerinden ödeme alacaksınız.
   
